# tvix-closure-thingamabob

./: Cargo.toml  flake.nix
src/: lib.rs
src/fixtures/: firefox.json  hello.json  jellyfin.json
